syntax = "proto3";

option java_multiple_files = true;
package virh.sense.trade.service;

message BDecimal {
  int32 scale = 1;
  BInteger int_val = 2;
}

message BInteger {
  bytes value = 1;
}

message EmptyResponse {
}

message CheckResponse {
	bool flag = 1;
}